--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Netflix Slider</title>
+  <title>Short Uploads - Development Version</title>
+  <link rel="icon" href="images/logo.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
@@ -11,9 +12,6 @@
   <link href="mdb/css/bootstrap.min.css" rel="stylesheet">
   <link href="mdb/css/mdb.min.css" rel="stylesheet">
   <link href="mdb/css/style.css" rel="stylesheet">
-      <style>
- 
-    </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg sticky-top navbar-dark black">
