Fixed prev button bug

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
           &nbsp;&nbsp;Short Uploads
         </a>
         <ul class="navbar-nav ml-auto mt-lg-0 pull-right">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LANGUAGES</a>
+                <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">TELUGU</a>
+                    <a class="dropdown-item" href="#">HINDI</a>
+                    <a class="dropdown-item" href="#">ENGLISH</a>
+                </div>
+            </li>
             <li class="nav-item active">
                 <a class="nav-link" href="#">GALLERY <span class="sr-only">(current)</span></a>
             </li>
