--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <div class="container" style="margin-left: 40px; margin-right: 40px; margin-top: 20px; max-width: 1250px;">
     <div class="row">
-      <div id="carousel-thumb" class="carousel carousel-fade" data-ride="carousel">
+      <div id="carousel-thumb" style="width: 100%" class="carousel carousel-fade" data-ride="carousel">
         <!--Slides-->
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
