Added gallery and watch

--- a/gallery.html
+++ b/gallery.html
@@ -34,9 +34,9 @@
                     <a class="dropdown-item" href="#">ENGLISH</a>
                 </div>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="#">WATCHLIST</a>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a class="btn btn-sm btn-red" href="#">SIGN IN</a>
             </li>
@@ -152,14 +152,14 @@
     </div>
     <div class="slider-container">
         <h4>SERIES</h4>
-        <div class="slide channel">
+        <a href="watch.html" class="slide channel">
           <img class="tile__img" src="https://i.ytimg.com/vi/I3cRfm62wRQ/maxresdefault.jpg" alt="" />
           <div class="tile__details">
-            <div class="tile__title">
+            <div class="tile__title white-text">
               703 | Action Break Down
             </div>
           </div>
-        </div>
+        </a>
         <div class="slide channel">
           <img class="tile__img" src="http://www.smtv24x7.com/SMTV24x7images/englishnews/bigimage/pills_7307.jpg" alt="" />
           <div class="tile__details">
