--- a/watch.html
+++ b/watch.html
@@ -20,7 +20,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="gallery.html">
           &nbsp;&nbsp;
           <img src="images/logo.png" height="30" alt="" style="border-radius: 20%">
           &nbsp;&nbsp;Short Uploads
@@ -35,11 +35,11 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">GALLERY</a>
+                <a class="nav-link" href="gallery.html">GALLERY</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="#">WATCHLIST</a>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a class="btn btn-sm btn-red" href="#">SIGN IN</a>
             </li>
@@ -47,13 +47,82 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=E6Crxk6FBLk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      <h4 class="sub-heading">703 - Episode 1</h4>
+      <div class="col-md-9 video-container">
+        <iframe width="100%" height="510px" src="https://www.youtube.com/embed/E6Crxk6FBLk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <h4 class="sub-heading">703 - Episode 1</h4>
+      </div>
+      <div class="col-md-3 details-container">
+        <h5 class="black-text">703 || Telugu Web Series</h5>
+        <ul class="nav nav-tabs" role="tablist">
+          <li class="nav-item tab-item col-6">
+            <a class="nav-link" data-toggle="tab" href="#login" role="tab">Details</a>
+          </li>
+          <li class="nav-item tab-item col-6">
+            <a class="nav-link active" data-toggle="tab" href="#signup" role="tab">Episodes</a>
+          </li>
+        </ul>
+
+        <div class="tab-content">
+          <div class="tab-pane" id="login" role="tabpanel">
+            
+          </div>
+          <div class="tab-pane active" id="signup" role="tabpanel">
+            <div class="container-fluid description-div">
+              <div class="view overlay hm-black-light">
+                <img src="https://i.ytimg.com/vi/DGYFGjJySvI/maxresdefault.jpg" class="img-fluid " alt="">
+                <div class="mask flex-top">
+                  <p class="white-text">703 - Episode 2</p>
+                  <small>This is an action and suspense thriller.</small>
+                  <div class="card-links">
+                    <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="/iage" class="white-text"><span class="fa fa-clock-o fa-1x"></span></a>
+                  </div>
+                </div>
+              </div>
+              <div class="view overlay hm-black-light">
+                <img src="https://i.ytimg.com/vi/wTkzkLC5NpI/maxresdefault.jpg" class="img-fluid " alt="">
+                <div class="mask flex-top">
+                  <p class="white-text">703 - Episode 3</p>
+                  <small>This is an action and suspense thriller.</small>
+                  <div class="card-links">
+                    <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="/iage" class="white-text"><span class="fa fa-clock-o fa-1x"></span></a>
+                  </div>
+                </div>
+              </div>
+              <div class="view overlay hm-black-light">
+                <img src="https://i.ytimg.com/vi/e_pBP-eyozM/maxresdefault.jpg" class="img-fluid " alt="">
+                <div class="mask flex-top">
+                  <p class="white-text">703 - Episode 4</p>
+                  <small>This is an action and suspense thriller.</small>
+                  <div class="card-links">
+                    <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="/iage" class="white-text"><span class="fa fa-clock-o fa-1x"></span></a>
+                  </div>
+                </div>
+              </div>
+              <div class="view overlay hm-black-light">
+                <img src="https://i.ytimg.com/vi/WTJOzsPHnmI/maxresdefault.jpg" class="img-fluid " alt="">
+                <div class="mask flex-top">
+                  <p class="white-text">703 - Episode 5</p>
+                  <small>This is an action and suspense thriller.</small>
+                  <div class="card-links">
+                    <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="/iage" class="white-text"><span class="fa fa-clock-o fa-1x"></span></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <br>
     </div>  
   </div>
-
+  <hr>
   <div class="slider-frame">
     <div class="slider-container">
         <h4>RELATED SERIES</h4>
@@ -98,6 +167,41 @@
   <script type="text/javascript" src="mdb/js/popper.min.js"></script>
   <script type="text/javascript" src="mdb/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="mdb/js/mdb.min.js"></script>
+
+  <!-- <script type="text/javascript">
+    var scaling = 1.50;
+    var videoWidth = 300;
+    var videoHeight = 200;
+    var videoWidthDiff = (videoWidth * scaling) - videoWidth;
+    var videoHeightDiff = (videoHeight * scaling) - videoHeight;
+    $(".slide").mouseover(function() {
+        $(this).css("width", videoWidth * scaling);
+        $(this).css("height", videoHeight * scaling);
+        $(this).css("top", -(videoHeightDiff / 2));
+        $(this).css("z-index", 200);
+        if($(".slide").index($(this)) == 0 || ($(".slide").index($(this))) % 4 == 0){
+          // do nothing
+        }
+        
+    }).mouseout(function() {
+        $(this).css("width", videoWidth * 1);
+        $(this).css("height", videoHeight * 1);
+        $(this).css("top", 0);
+        $(this).css("z-index", 0);
+        // $(this).parent(".slider-container").animate({
+        //     left: + 40
+        // }, 50);
+    });
+  </script> -->
+  <!-- <script type="text/javascript">
+    $('.description-div').on( 'mousewheel DOMMouseScroll', function (e) { 
+      var e0 = e.originalEvent;
+      var delta = e0.wheelDelta || -e0.detail;
+
+      this.scrollTop += ( delta < 0 ? 1 : -1 ) * 30;
+      e.preventDefault();  
+    });
+  </script> -->
 </body>
 
 </html>
