--- a/gallery.html
+++ b/gallery.html
@@ -25,6 +25,11 @@
           <img src="images/logo.png" height="30" alt="" style="border-radius: 20%">
           &nbsp;&nbsp;Short Uploads
         </a>
+        <form class="form-inline md-form form-sm middle" style="margin-bottom: 0px">
+            
+            <input class="form-control" style="margin-top:5px; height:20px; width: 250px;" type="text">
+            <button style=" margin-bottom:0px" class="btn btn-sm btn-outline-white black-text"><span class="fa fa-search"></span></button>
+        </form>
         <ul class="navbar-nav ml-auto mt-lg-0 pull-right">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LANGUAGES</a>
