--- a/gallery.html
+++ b/gallery.html
@@ -68,12 +68,12 @@
         </div>
         <!--/.Slides-->
         <!--Controls-->
-        <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <a class="carousel-control-prev" style="left: -100px" href="#carousel-thumb" role="button" data-slide="prev">
+            <span class="fa fa-angle-left fa-3x align-middle" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <a class="carousel-control-next" style="right: -100px" href="#carousel-thumb" role="button" data-slide="next">
+            <span class="fa fa-angle-right fa-3x align-middle" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
         <!--/.Controls-->
@@ -159,7 +159,7 @@
       </div>
       <div class="slider-container">
           <h4>SERIES</h4>
-          <a href="watch.html" class="slide channel">
+          <a href="/watch" class="slide channel">
             <img class="tile__img" src="https://i.ytimg.com/vi/I3cRfm62wRQ/maxresdefault.jpg" alt="" />
             <div class="tile__details">
               <div class="tile__title white-text">
@@ -217,7 +217,7 @@
             <img class="tile__img" src="https://i.ytimg.com/vi/kLk7lhLS39c/maxresdefault.jpg" alt="" />
             <div class="tile__details text-center">
               <div class="tile__title text-left">
-                <h5 style="width: 300px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Birthday || Directed by Hrishikesh Tummila</h5>
+                <h5 class="auto-cut">Birthday || Directed by Hrishikesh Tummila</h5>
                 <h6>28m 52s</h6>
                 <div class="card-links">
                   <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -231,7 +231,7 @@
             <img class="tile__img" src="https://i.ytimg.com/vi/M_we_HqAeJw/maxresdefault.jpg" alt="" />
             <div class="tile__details text-center">
               <div class="tile__title text-left">
-                <h5 style="width: 300px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Bahumati || The Reward</h5>
+                <h5 class="auto-cut">Bahumati || The Reward</h5>
                 <h6>28m 52s</h6>
                 <div class="card-links">
                   <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -311,7 +311,7 @@
             <img class="tile__img" src="https://i.ytimg.com/vi/kLk7lhLS39c/maxresdefault.jpg" alt="" />
             <div class="tile__details text-center">
               <div class="tile__title text-left">
-                <h5 style="width: 300px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Birthday || Directed by Hrishikesh Tummila</h5>
+                <h5 class="auto-cut">Birthday || Directed by Hrishikesh Tummila</h5>
                 <h6>28m 52s</h6>
                 <div class="card-links">
                   <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -325,7 +325,7 @@
             <img class="tile__img" src="https://i.ytimg.com/vi/M_we_HqAeJw/maxresdefault.jpg" alt="" />
             <div class="tile__details text-center">
               <div class="tile__title text-left">
-                <h5 style="width: 300px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Bahumati || The Reward</h5>
+                <h5 class="auto-cut">Bahumati || The Reward</h5>
                 <h6>28m 52s</h6>
                 <div class="card-links">
                   <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -390,18 +390,18 @@
       </div>
     </div>
 
-    <div class="slider-frame">
-      <div class="btnn prev text-center">
+    <div class="slider-frames">
+      <div class="btnn prevs text-center">
         <br><br><br><br>
         <span class="fa fa-angle-left fa-3x align-middle"></span>
       </div>
-      <div class="btnn next text-center">
+      <div class="btnn nexts text-center">
         <br><br><br><br>
         <span class="fa fa-angle-right fa-3x align-middle"></span>
       </div>
-      <div class="slider-container">
+      <div class="slider-containers">
           <h4>GENRE</h4>
-          <div class="slide text-center">
+          <div class="slides text-center">
             <div class="emoji  emoji--haha">
               <div class="emoji__face">
                 <div class="emoji__eyes"></div>
@@ -411,7 +411,7 @@
               </div>  
             </div>
           </div>
-          <div class="slide text-center">
+          <div class="slides text-center">
             <div class="emoji  emoji--wow">
               <div class="emoji__face">
                 <div class="emoji__eyebrows"></div>
@@ -420,7 +420,7 @@
               </div>
             </div>
           </div>
-          <div class="slide text-center">
+          <div class="slides text-center">
             <div class="emoji  emoji--sad">
               <div class="emoji__face">
                 <div class="emoji__eyebrows"></div>
@@ -429,12 +429,12 @@
               </div>
             </div>
           </div>
-          <div class="slide text-center">
+          <div class="slides text-center">
             <div class="emoji  emoji--love">
               <div class="emoji__heart"></div>
             </div>
           </div>
-          <div class="slide text-center">
+          <div class="slides text-center">
             <div class="emoji  emoji--yay">
               <div class="emoji__face">
                 <div class="emoji__eyebrows"></div>
@@ -442,7 +442,7 @@
               </div>
             </div>
           </div>
-          <div class="slide text-center">
+          <div class="slides text-center">
             <div class="emoji  emoji--angry">
               <div class="emoji__face">
                 <div class="emoji__eyebrows"></div>
