--- a/gallery.html
+++ b/gallery.html
@@ -391,16 +391,25 @@
     </div>
 
     <div class="slider-frames">
-      <div class="btnn prevs text-center">
+      <!-- <div class="btnn prevs text-center">
         <br><br><br><br>
         <span class="fa fa-angle-left fa-3x align-middle"></span>
       </div>
       <div class="btnn nexts text-center">
         <br><br><br><br>
         <span class="fa fa-angle-right fa-3x align-middle"></span>
-      </div>
+      </div> -->
       <div class="slider-containers">
           <h4>GENRE</h4>
+          <div class="slides text-center">
+            <div class="emoji  emoji--angry">
+              <div class="emoji__face">
+                <div class="emoji__eyebrows"></div>
+                <div class="emoji__eyes"></div>
+                <div class="emoji__mouth"></div>
+              </div>
+            </div>
+          </div>
           <div class="slides text-center">
             <div class="emoji  emoji--haha">
               <div class="emoji__face">
@@ -434,23 +443,14 @@
               <div class="emoji__heart"></div>
             </div>
           </div>
-          <div class="slides text-center">
+          <!-- <div class="slides text-center">
             <div class="emoji  emoji--yay">
               <div class="emoji__face">
                 <div class="emoji__eyebrows"></div>
                 <div class="emoji__mouth"></div>
               </div>
             </div>
-          </div>
-          <div class="slides text-center">
-            <div class="emoji  emoji--angry">
-              <div class="emoji__face">
-                <div class="emoji__eyebrows"></div>
-                <div class="emoji__eyes"></div>
-                <div class="emoji__mouth"></div>
-              </div>
-            </div>
-          </div>
+          </div> -->
       </div>
     </div>
   </div>
