--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
               <br>
               <br>
               <img src="static/logo.png" style="height: 300px; width: 70%;  border-radius: 10%; box-shadow: 0 2px 12px 6px rgba(0,0,0,0.06), 0 2px 12px 0 rgba(0,0,0,0.06), 0 2px 12px 0 rgba(0,0,0,0.08)"><br>
-              <span class="logo1">SHORT</span>
-              <span class="logo2">UPLOADS</span>
+              <!-- <span class="logo1">SHORT</span>
+              <span class="logo2">UPLOADS</span> -->
             </div>
             <div class="col-md-1"></div>
           </div>
