--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
           <div class="align-middle row">
             <div class="col-md-3"></div>
             <div class="col-md-8 text-center logo-div">
-              <br>
-              <br>
-              <img src="static/logo.png" style="height: 300px; width: 70%;  border-radius: 10%; box-shadow: 0 2px 12px 6px rgba(0,0,0,0.06), 0 2px 12px 0 rgba(0,0,0,0.06), 0 2px 12px 0 rgba(0,0,0,0.08)"><br>
+              <img src="static/logo.png" style="height: 480px; width: 100%;  border-radius: 10%; box-shadow: 0 2px 12px 6px rgba(0,0,0,0.06), 0 2px 12px 0 rgba(0,0,0,0.06), 0 2px 12px 0 rgba(0,0,0,0.08)"><br>
               <!-- <span class="logo1">SHORT</span>
               <span class="logo2">UPLOADS</span> -->
             </div>
@@ -50,7 +48,7 @@
             </div>
             <div class="row">
               <div class="col-lg-12 col-md-12 text-center" style="margin-top:5px;">
-                <a class="btn btn-outline-dark btn-block" href="gallery.html">Welcome as a Guest</a>
+                <a class="btn btn-dark btn-block" href="gallery.html">Welcome as a Guest</a>
               </div>
             </div>
             <br>
