--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html ng-app="ShortUploads">
 <head>
-	<title>Short Uploads - Home</title>
+  <title>Short Uploads - Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
-  <link rel="stylesheet" href="static/homepage.css"></link>
+  <link rel="stylesheet" href="{{ url_for('static', filename='homepage.css') }}"></link>
   <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Teko:500" rel="stylesheet">
-	<!-- <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet"> -->
 </head>
 <body ng-controller="AuthController">
   <br><br><br><br>
@@ -16,9 +16,17 @@
       <div class="col-lg-6 col-md-12">
         <div class="container">
           <div class="align-middle row">
-            <div class="col-md-3"></div>
-            <div class="col-md-8 text-center logo-div">
-              <img src="static/logo.png" style="height: 480px; width: 100%;  border-radius: 10%; box-shadow: 0 2px 12px 6px rgba(0,0,0,0.06), 0 2px 12px 0 rgba(0,0,0,0.06), 0 2px 12px 0 rgba(0,0,0,0.08)"><br>
+            <div class="col-md-12 text-center logo-div">
+              <br><br><br><br>
+              <div class="row">
+                <div class="col-md-8">
+                  <img src="static/dribble_camera.gif">
+                </div>
+                <div class="col-md-4">
+                  <br>
+                  <img src="static/logo.png" style=" padding:0px; height: 250px; border-radius: 10%; box-shadow: 0 2px 12px 6px rgba(0,0,0,0.08), 0 2px 12px 0 rgba(0,0,0,0.08), 0 2px 12px 0 rgba(0,0,0,0.08)"><br>
+                </div>
+              </div>
               <!-- <span class="logo1">SHORT</span>
               <span class="logo2">UPLOADS</span> -->
             </div>
@@ -48,7 +56,7 @@
             </div>
             <div class="row">
               <div class="col-lg-12 col-md-12 text-center" style="margin-top:5px;">
-                <a class="btn btn-dark btn-block" href="gallery.html">Welcome as a Guest</a>
+                <a class="btn btn-dark btn-block" href="/gallery">Welcome as a Guest</a>
               </div>
             </div>
             <br>
@@ -113,11 +121,11 @@
       </div>
     </div> -->
   </div>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-  <script src="static/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+  <script src="{{ url_for('static', filename='main.js') }}"></script>
 </body>
 </html>
