--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
-  <link rel="stylesheet" href="{{ url_for('static', filename='homepage.css') }}"></link>
+  <link rel="stylesheet" href="static/homepage.css"></link>
   <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Teko:500" rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet"> -->
 </head>
@@ -56,7 +56,7 @@
             </div>
             <div class="row">
               <div class="col-lg-12 col-md-12 text-center" style="margin-top:5px;">
-                <a class="btn btn-dark btn-block" href="/gallery">Welcome as a Guest</a>
+                <a class="btn btn-dark btn-block" href="gallery.html">Welcome as a Guest</a>
               </div>
             </div>
             <br>
@@ -125,7 +125,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-  <script src="{{ url_for('static', filename='main.js') }}"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+  <script src="static/main.js"></script>
 </body>
 </html>
