--- a/gallery.html
+++ b/gallery.html
@@ -100,7 +100,7 @@
         <span class="fa fa-angle-right fa-3x align-middle"></span>
       </div> -->
       <div class="slider-containers">
-          <h4>GENRE</h4>
+          <h4 class="black-text">GENRE</h4>
           <div class="slides text-center">
             <div class="emoji  emoji--haha">
               <div class="emoji__face">
