--- a/watch.html
+++ b/watch.html
@@ -52,7 +52,7 @@
         <div style="margin-top: 2%">
           <iframe width="100%" height="360px" src="https://www.youtube.com/embed/E6Crxk6FBLk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           <h4>703 - Episode 1 </h4>
-          <a class="black-text" href="" data-toggle="dropdown"><small>Cast & Crew</small></a>
+          <a class="black-text" href="" data-toggle="dropdown"><small class="white-text">Cast & Crew</small></a>
         </div>
         <div class="slider-frame slider-frame2">
           <div class="btnn prevv text-center">
@@ -117,7 +117,7 @@
         </div>
       </div>
       <div class="col-md-3 details-container">
-        <h4>703</h4>
+        <h4 class="white-text">703</h4>
         <!-- <ul class="nav nav-tabs" role="tablist">
           <li class="nav-item tab-item col-6">
             <a class="nav-link" data-toggle="tab" href="#login" role="tab">Details</a>
@@ -135,7 +135,7 @@
                   <img src="https://i.ytimg.com/vi/DGYFGjJySvI/maxresdefault.jpg" class="img-fluid " alt="">
                   <div class="mask flex-top">
                     <p class="white-text">703 - Episode 2</p>
-                    <!-- <small>This is an action and suspense thriller.</small> -->
+                    <!-- <small class="white-text">This is an action and suspense thriller.</small> -->
                     <div class="card-links">
                       <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                       <a href="/iage" class="white-text"><span class="fa fa-clock-o fa-1x"></span></a>
@@ -146,7 +146,7 @@
                   <img src="https://i.ytimg.com/vi/wTkzkLC5NpI/maxresdefault.jpg" class="img-fluid " alt="">
                   <div class="mask flex-top">
                     <p class="white-text">703 - Episode 3</p>
-                    <small>This is an action and suspense thriller.</small>
+                    <small class="white-text">This is an action and suspense thriller.</small>
                     <div class="card-links">
                       <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                       <a href="/iage" class="white-text"><span class="fa fa-clock-o fa-1x"></span></a>
@@ -157,7 +157,7 @@
                   <img src="https://i.ytimg.com/vi/e_pBP-eyozM/maxresdefault.jpg" class="img-fluid " alt="">
                   <div class="mask flex-top">
                     <p class="white-text">703 - Episode 4</p>
-                    <small>This is an action and suspense thriller.</small>
+                    <small class="white-text">This is an action and suspense thriller.</small>
                     <div class="card-links">
                       <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                       <a href="/iage" class="white-text"><span class="fa fa-clock-o fa-1x"></span></a>
@@ -168,7 +168,7 @@
                   <img src="https://i.ytimg.com/vi/WTJOzsPHnmI/maxresdefault.jpg" class="img-fluid " alt="">
                   <div class="mask flex-top">
                     <p class="white-text">703 - Episode 5</p>
-                    <small>This is an action and suspense thriller.</small>
+                    <small class="white-text">This is an action and suspense thriller.</small>
                     <div class="card-links">
                       <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                       <a href="/iage" class="white-text"><span class="fa fa-clock-o fa-1x"></span></a>
@@ -179,7 +179,7 @@
                     <img src="https://i.ytimg.com/vi/WTJOzsPHnmI/maxresdefault.jpg" class="img-fluid " alt="">
                     <div class="mask flex-top">
                       <p class="white-text">703 - Episode 5</p>
-                      <small>This is an action and suspense thriller.</small>
+                      <small class="white-text">This is an action and suspense thriller.</small>
                       <div class="card-links">
                         <a href="/iage" class="white-text"><span class="fa fa-play fa-1x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <a href="/iage" class="white-text"><span class="fa fa-clock-o fa-1x"></span></a>
