--- a/gallery.html
+++ b/gallery.html
@@ -33,17 +33,12 @@
         </form>
         <ul class="navbar-nav ml-auto mt-lg-0 pull-right">
             <li class="nav-item dropdown">
-                <!-- <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LANGUAGES</a> -->
-                <!-- <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LANGUAGES</a>
+                <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="#">TELUGU</a>
                     <a class="dropdown-item" href="#">HINDI</a>
                     <a class="dropdown-item" href="#">ENGLISH</a>
-                </div> -->
-                <select>
-                    <option value="Telugu" selected>Telugu</option>
-                    <option value="Hindi">Hindi</option>
-                    <option value="English">English</option>
-                </select>
+                </div>
             </li>
             <!-- <li class="nav-item">
                 <a class="nav-link" href="#">WATCHLIST</a>
