--- a/watch.html
+++ b/watch.html
@@ -25,14 +25,22 @@
           <img src="images/logo.png" height="40px" width="40px" style="border-radius: 20%">
         </a>
         <ul class="navbar-nav ml-auto mt-lg-0 pull-right">
-            <li class="nav-item dropdown">
+<!--             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LANGUAGES</a>
                 <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="#">TELUGU</a>
                     <a class="dropdown-item" href="#">HINDI</a>
                     <a class="dropdown-item" href="#">ENGLISH</a>
                 </div>
-            </li>
+            </li> -->
+          <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LANGUAGES</a>
+                <select> 
+                    <option value="Telugu" selected>Telugu</option>  
+                    <option value="Hindi">Hindi</option> 
+                    <option value="English">English</option> 
+                </select>  
+             </li>
             <!-- <li class="nav-item">
                 <a class="nav-link" href="/gallery">GALLERY</a>
             </li> -->
