--- a/watch.html
+++ b/watch.html
@@ -34,7 +34,7 @@
                 </div>
             </li> -->
           <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LANGUAGES</a>
+<!--                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LANGUAGES</a> -->
                 <select> 
                     <option value="Telugu" selected>Telugu</option>  
                     <option value="Hindi">Hindi</option> 
