--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
         </form>
         <ul class="navbar-nav ml-auto mt-lg-0 pull-right">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LANGUAGES</a>
+<!--                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LANGUAGES</a> -->
                 <select> 
                     <option value="Telugu" selected>Telugu</option>  
                     <option value="Hindi">Hindi</option> 
