--- a/gallery.html
+++ b/gallery.html
@@ -458,7 +458,7 @@
       </div>
     </div>
   </div>
-  <footer class="page-footer font-small pt-4 mt-4">
+  <footer class="page-footer font-small stylish-color-dark pt-4 mt-4">
     <div class="container-fluid text-center text-md-left">
         <div class="row">
             <div class="col-md-6">
