Added new UI commits

--- a/gallery.html
+++ b/gallery.html
@@ -458,13 +458,13 @@
       </div>
     </div>
   </div>
-  <footer class="page-footer font-small stylish-color-dark pt-4 mt-4">
+  <footer class="page-footer font-small stylish-color-dark pt-4 mt-4" style="margin-left: 260px; margin-right: 180px;">
     <div class="container-fluid text-center text-md-left">
         <div class="row">
             <div class="col-md-6">
                 <h5 class="text-uppercase">Contact Us</h5>
-                <p>(+91) 8686093417</p>
-                <p>shortuploads@gmail.com</p>
+                <p>Phone: (+91) 8686093417</p>
+                <p>Email: shortuploads@gmail.com</p>
             </div>
             <div class="col-md-6">
                 <h5 class="text-uppercase">Index</h5>
